Spacing Alignments fix

--- a/resources/assets/sass/application.scss
+++ b/resources/assets/sass/application.scss
@@ -1609,3 +1609,6 @@ article:nth-child(4){
 .noborder{
     border-right: 0;
 }
+.podicon{
+    width:20px;
+}
